Adicionada funcionalidade antiga de adicionar fileset e schedule de um computador que já existe

--- a/django/backup_corporativo/templates/bkp/computer/view_computer.html
+++ b/django/backup_corporativo/templates/bkp/computer/view_computer.html
@@ -117,6 +117,7 @@
 		                    <button onclick="location.href='{{script_name}}/{{proc.new_run_url}}'"><span>Executar</span></button>
 		                    <button onclick="location.href='{{script_name}}/{{proc.edit_url}}'"><span>Alterar</span></button>
 		                    <button onclick="location.href='{{script_name}}/{{proc.delete_url}}'" class="red"><span>Remover</span></button>
+                            <button onclick="location.href='{{script_name}}/{{proc.new_fileseet_url}}'"><span>Novo Local</span></button>
 		                </div>
 		            </div>
 			    </div>
