--- a/django/backup_corporativo/templates/bkp/procedure/new_procedure_schedule.html
+++ b/django/backup_corporativo/templates/bkp/procedure/new_procedure_schedule.html
@@ -42,6 +42,8 @@
 
 	
 <button type="submit"><span>Prosseguir</span></button>
+<button onclick="location.href='{% url backup_corporativo.bkp.views.view_computer comp.id %}';return false"><span>Cancelar</span></button>
+
 </form>
 </div>
 
