--- a/django/backup_corporativo/templates/bkp/management/menu_management.html
+++ b/django/backup_corporativo/templates/bkp/management/menu_management.html
@@ -2,6 +2,6 @@
 <ul class="horizontal_menu">
 	<li {% if request.META.PATH_INFO|isequal:"/management/" %}class="active"{% endif %}><a href="{{script_name}}/management/">Principal</a></li>
 	<li {% if request.META.PATH_INFO|contains:"/management/computers/list" %}class="active"{% endif %}><a href="{{script_name}}/management/computers/list">Computadores</a></li>
-	<li>Backups</li>
+	<li {% if request.META.PATH_INFO|contains:"/management/strongbox" %}class="active"{% endif %}><a href="{% url backup_corporativo.bkp.views.manage_strongbox %}">Cofre</a></li>
 	<li {% if request.META.PATH_INFO|contains:"/management/storages/list" %}class="active"{% endif %}><a href="{{script_name}}/management/storages/list">Storages</a></li>
 </ul>
