--- a/django/backup_corporativo/templates/bkp/management/changepwd_strongbox.html
+++ b/django/backup_corporativo/templates/bkp/management/changepwd_strongbox.html
@@ -17,6 +17,7 @@
             </div>
         {% endfor %}        
     <button type="submit"><span>Alterar</span></button>
+    <a href="{% url bkp.views.manage_strongbox %}">Cancelar</a>
     </form>
     
 </div>
