--- a/django/backup_corporativo/templates/bkp/management/new_strongbox.html
+++ b/django/backup_corporativo/templates/bkp/management/new_strongbox.html
@@ -8,6 +8,7 @@
 <h2>Gerenciar Cofre</h2><br /><br />
 
 <div class='bloco_texto'>
+    {{newstrongbox_form.non_field_errors}}
     <h3>Você ainda não possui um cofre. Digite a senha para criá-lo</h3><br /><br />
     <form action="{{script_name}}/management/strongbox/create" method="post">
     {% for field in newstrongbox_form %}
