--- a/django/backup_corporativo/templates/bkp/fileset/delete_fileset.html
+++ b/django/backup_corporativo/templates/bkp/fileset/delete_fileset.html
@@ -4,12 +4,12 @@
 
 <p>Deseja realmente remover o local '{{fset}}' ?</p>
 
-<form name="delete_fileset" action="{{script_name}}/{{fset.delete_url}}" method="POST">
+<form name="delete_fileset" action="{% url bkp.views.delete_fileset fset.id %}" method="POST">
 	<input type="submit" value="Sim">
 </form>
 
 <br />
 
-<a href="{{script_name}}/computer/{{comp.id}}">Cancelar</a>
+<a href="{% url bkp.views.view_computer comp.id %}">Cancelar</a>
 
 {% endblock %}
