--- a/django/backup_corporativo/templates/bkp/schedule/delete_schedule.html
+++ b/django/backup_corporativo/templates/bkp/schedule/delete_schedule.html
@@ -4,12 +4,12 @@
 
 <p>Deseja realmente remover o agendamento '{{sched}}' ?</p>
 
-<form name="delete_schedule" action="{{script_name}}/{{sched.delete_url}}" method="POST">
+<form name="delete_schedule" action="{% url bkp.views.delete_schedule sched.id %}" method="POST">
 	<input type="submit" value="Sim">
 </form>
 
 <br />
 
-<a href="{{script_name}}/computer/{{comp.id}}">Cancelar</a>
+<a href="{% url bkp.views_view_computer comp.id %}">Cancelar</a>
 
 {% endblock %}
