--- a/django/backup_corporativo/templates/bkp/storage/view_storage_config.html
+++ b/django/backup_corporativo/templates/bkp/storage/view_storage_config.html
@@ -5,14 +5,14 @@
         <img class="ico_secao" src="{{script_name}}/static/imagens/ico_big_comp.gif" />
 	    <h2>
 	        <span>Storage</span><br/>
-	        {{ sto.storage_name }} <span class="toogle_pequeno"><a href="{{script_name}}/{{sto.view_url}}">(voltar)</a></span>
+	        {{ sto.storage_name }} <span class="toogle_pequeno"><a href="{% url bkp.views.view_storage sto.id %}">(voltar)</a></span>
 	        
 	    </h2>
     </div>
 <div class="titulo_botoes">
     <h3>bacula-sd.conf</h3>
     <div class="botao_acoes">
-         <form action="{{script_name}}/{{sto.storage_dump_config_url}}" method="POST"><button type="submit"><span>baixar</span></form>
+         <form action="{% url bkp.views.dump_storage_config sto.id %}" method="POST"><button type="submit"><span>baixar</span></form>
     </div>
 </div>
 <div class="bloco_texto">
