--- a/django/backup_corporativo/templates/bkp/management/main_management.html
+++ b/django/backup_corporativo/templates/bkp/management/main_management.html
@@ -13,11 +13,10 @@
 
 <div class="bloco_texto">
 <ul>
-    <li><a href="{{script_name}}/backup/new">Adicionar Computador</a></li>
-    <li><a href="{{script_name}}/backup/new" title="">Adicionar Backup</a></li>
-    <li>Adicionar Storage</li>
+    <li><a href="{% url bkp.views.new_computer %}?wizard=True">Adicionar Computador</a></li>
+    <li><a href="{% url bkp.views.new_storage %}">Adicionar Storage</a></li>
+    {# TODO: migrar restore para usar url filter #}
     <li><a href="{{script_name}}/restore/new" title="">Restaurar Arquivos</a></li>
-    <li><a href="{{script_name}}/management/strongbox/" title="">Gerenciar Cofre</a></li>
 </ul>
 </div>
 {% endblock %}
