--- a/django/backup_corporativo/templates/bkp/management/list_headerbkp.html
+++ b/django/backup_corporativo/templates/bkp/management/list_headerbkp.html
@@ -25,9 +25,9 @@
             <tr>
                 <td>{{hbkp.headerbkp_name}}</td>
                 <td>{{hbkp.created_on}}</td>
-                <td><button onclick="location.href='{{script_name}}/{{hbkp.restore_url}}';return false"><span>Restaurar</span></button>
-                <button onclick="location.href='{{script_name}}/{{hbkp.edit_url}}';return false"><span>Editar</span></button>
-	            <button onclick="location.href='{{script_name}}/{{hbkp.delete_url}}';return false" class="red"><span>Remover</span></button></td>
+                <td><button onclick="location.href='{% url bkp.views.bkp.restore_headerbkp hbkp.id %}';return false"><span>Restaurar</span></button>
+                <button onclick="location.href='{% url bkp.views.edit_headerbkp hbkp.id %}';return false"><span>Editar</span></button>
+	            <button onclick="location.href='{% url bkp.views.delete_headerbkp hbkp.id %}';return false" class="red"><span>Remover</span></button></td>
             </tr>
             {% endfor %}
         </tbody>
