--- a/django/backup_corporativo/templates/bkp/management/menu_management.html
+++ b/django/backup_corporativo/templates/bkp/management/menu_management.html
@@ -1,8 +1,8 @@
 {% load bkp_extras %}
 <ul class="horizontal_menu">
-	<li {% if request.META.PATH_INFO|isequal:"/management/" %}class="active"{% endif %}><a href="{{script_name}}/management/">Principal</a></li>
-	<li {% if request.META.PATH_INFO|contains:"/management/computers/list" %}class="active"{% endif %}><a href="{{script_name}}/management/computers/list">Computadores</a></li>
-	<li {% if request.META.PATH_INFO|contains:"/management/strongbox" %}class="active"{% endif %}><a href="{% url backup_corporativo.bkp.views.manage_strongbox %}">Cofre</a></li>
-	<li {% if request.META.PATH_INFO|contains:"/management/storages/list" %}class="active"{% endif %}><a href="{{script_name}}/management/storages/list">Storages</a></li>
+	<li {% if request.META.PATH_INFO|isequal:"/management/" %}class="active"{% endif %}><a href="{% url bkp.views.main_management %}">Principal</a></li>
+	<li {% if request.META.PATH_INFO|contains:"/management/computers/list" %}class="active"{% endif %}><a href="{% url bkp.views.list_computers %}">Computadores</a></li>
+	<li {% if request.META.PATH_INFO|contains:"/management/strongbox" %}class="active"{% endif %}><a href="{% url bkp.views.manage_strongbox %}">Cofre</a></li>
+	<li {% if request.META.PATH_INFO|contains:"/management/storages/list" %}class="active"{% endif %}><a href="{% url bkp.views.list_storages %}">Storages</a></li>
     <li {% if request.META.PATH_INFO|contains:"/management/encryption" %}class="active"{% endif %}><a href="{% url bkp.views.list_encryptions %}">Encriptação</a></li>
 </ul>
