--- a/django/backup_corporativo/templates/bkp/management/umount_strongbox.html
+++ b/django/backup_corporativo/templates/bkp/management/umount_strongbox.html
@@ -10,9 +10,9 @@
 <div class='bloco_texto'>
 
     <h3>Tem certeza que deseja travar o cofre?</h3><br /><br />
-    <form action="{{script_name}}/management/strongbox/umount" method="post">
+    <form action="{% url bkp.views.umount_strongbox %}" method="post">
     <button type="submit"><span>Sim</span></button>
-    <button onclick="location.href='{% url backup_corporativo.bkp.views.manage_strongbox %}';return false"><span>Cancelar</span></button>
+    <button onclick="location.href='{% url bkp.views.manage_strongbox %}';return false"><span>Cancelar</span></button>
 
     </form>
     
