--- a/django/backup_corporativo/templates/bkp/system/edit_system_password.html
+++ b/django/backup_corporativo/templates/bkp/system/edit_system_password.html
@@ -10,7 +10,7 @@
 <h2>Alterar Senha do Administrador</h2>
 <br /><br />
 
-<form action="{{script_name}}/system/password/update" method="post">
+<form action="{% url bkp.views.update_system_password %}" method="post">
     {% for field in pwdform %}
         <div class="fieldWrapper">
             {{ field.errors }}
