--- a/django/backup_corporativo/templates/bkp/schedule/delete_schedule.html
+++ b/django/backup_corporativo/templates/bkp/schedule/delete_schedule.html
@@ -2,14 +2,14 @@
 
 {% block content %}
 
-<p>Deseja realmente remover o agendamento '{{sched}}' ?</p>
+<h2>Deseja realmente remover o agendamento '{{sched}}' ?</h2><br /><br />
 
 <form name="delete_schedule" action="{% url bkp.views.delete_schedule sched.id %}" method="POST">
-	<input type="submit" value="Sim">
+	<p><input type="submit" value="Sim"> <a href="{% url bkp.views.edit_backup proc.id %}">Cancelar</a></p>
 </form>
 
 <br />
 
-<a href="{% url bkp.views_view_computer comp.id %}">Cancelar</a>
+
 
 {% endblock %}
